Progress on #72185558. Tests pass locally. This commit checks for CI.
    * Split tests into separate plugin.
    * Make tests work from within Eclipse via "Run as | JUnit Plug-in   Test"